--- a/home/templates/home/footer.html
+++ b/home/templates/home/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="d-flex">
         <p>
-            copyright &copy; some developers umair
+            copyright &copy; some developers
         </p>
     </div>
 </footer>
