--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -101,6 +101,18 @@ footer div{
   padding:30px;
   width: 100%;
 }
+.errorlist{
+  margin:20px 0;
+  list-style: none;
+}
+
+.errorlist li{
+  padding:10px 12px;
+  margin-bottom: 10px;
+  background-color: #DA7F8F;
+  border-radius:6px;
+  color: var(--font-color);
+}
 .form label{
   width: 400px;
   position: relative;
