auth login form template

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -23,7 +23,7 @@
 
             <div class="form-help">
                 <small>
-                    <p>Did not have an account? <a href="#">Register</a></p>
+                    <p>Did not have an account? <a href="{% url 'register' %}">Register</a></p>
                     <p>Forget Password? <a href="#">Reset Password</a></p>
                 </small>
             </div>
