--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -46,7 +46,7 @@
             <button type="submit" name="button">Register</button>
             <div class="form-help">
                 <small>
-                    <p>Already registered? <a href="#">Login</a></p>
+                    <p>Already registered? <a href="{% url 'login' %}">Login</a></p>
                 </small>
             </div>
         </form>
