--- a/home/templates/home/header.html
+++ b/home/templates/home/header.html
@@ -6,8 +6,8 @@
         <nav>
             <ul>
                 <li><a href="#">Books</a></li>
-                <li><a href="#">Register</a></li>
-                <li><a href="#" class="login">Login</a></li>
+                <li><a href="{% url 'register' %}">Register</a></li>
+                <li><a href="{% url 'login' %}" class="login">Login</a></li>
             </ul>
         </nav>
     </div>
