added password-rest url

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -24,7 +24,7 @@
             <div class="form-help">
                 <small>
                     <p>Did not have an account? <a href="{% url 'register' %}">Register</a></p>
-                    <p>Forget Password? <a href="#">Reset Password</a></p>
+                    <p>Forget Password? <a href="{% url 'password-reset-request' %}">Reset Password</a></p>
                 </small>
             </div>
         </form>
