show rest link expire message

--- a/account/templates/account/password-reset-confirm.html
+++ b/account/templates/account/password-reset-confirm.html
@@ -2,7 +2,9 @@
 {% block content%}
 <main>
     <div class="form">
+        {% if form %}
         <form action="" method="POST">
+
             {% csrf_token %}
             <h2>Password Reset</h2>
             {% if form.errors %}
@@ -10,7 +12,7 @@
                     {{ errors }}
                 {% endfor %}
             {% endif %}
-        {% if form %}
+        
             {% for field in form %}
                 <label for="{{ field.field.widget.attrs.id }}">
                     {{ field }}
@@ -22,10 +24,14 @@
                 </div>
                 {% endif %}
             {% endfor %}
-        {% endif %}
             <button type="submit" name="button">Reset</button>
             </div>
         </form>
+        {% else%}
+         <form>
+            <p>Link expired <a href="{% url 'password-reset-request' %}">Resend</a></p>
+         </form>
+        {% endif %}
     </div>
 </main>
 {% endblock%}
