corrected spell of welcome

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,7 +4,7 @@
 <main>
     <div class="main-bg-img" style="background-image: url('{% static 'home/images/home-books.jpg' %}');">
     {% if user.is_authenticated %}
-    <h2>Wellcome {{ user.get_full_name }}</h2>
+    <h2>Welcome {{ user.get_full_name }}</h2>
     {% endif %}
     </div>
 </main>
