--- a/templates/books/addBook.html
+++ b/templates/books/addBook.html
@@ -5,11 +5,14 @@
     <title>Add Book</title>
 </head>
 <body>
-<form>
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit">
-
-</form>
+{% if request.method == 'POST' %}
+    <h1>Book Added</h1>
+{% else %}
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit">
+    </form>
+{% endif %}
 </body>
 </html>
